--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/site.css">    
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/xeditable.css">    
 </head>
 
 <body>
@@ -51,6 +52,7 @@
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/Vendor/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/Vendor/xeditable.min.js"></script>
 
     <!-- Source MoleskinApp -->
     <script type="text/javascript" src="js/Apps/moleskin.js"></script>
@@ -63,7 +65,6 @@
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
 
     <!-- Source Directives -->
-   <script type="text/javascript" src="js/Directives/datepicker_directive.js"></script>
 
     <!-- Source Routes -->
     <script type="text/javascript" src="js/Routes/routes.js"></script>
