--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <ol class="breadcrumb">
                 <li><a href="#login"><i class="fa fa-home"></i> Login</a></li>
                 <li><a href="#goals"><i class="fa fa-list fa-rotate-180"></i> Goals</a></li>
+                <li><a href="#todos"><i class="fa fa-check-square"></i> Todos</a></li>
                 <li>
                     <span ng-controller="usersController">                    
                         <a href="#" ng-click="logout()">Log Out</a>
@@ -37,14 +38,6 @@
 	       <div ng-view></div>
         </div>
     </div>
-
-  <!--   <form name="datepickerForm" class="form-inline" role="form">
-          <!-- Basic example -->
-<!--           <div class="form-group" ng-class="{'has-error': datepickerForm.date.$invalid}">
-            <label class="control-label"><i class="fa fa-calendar"></i> Date <small>(as date)</small></label>
-            <input type="text" class="form-control" ng-model="selectedDate" name="date" bs-datepicker>
-          </div>
-    </form> -->
     
     <!-- Source Venders -->
     <script type="text/javascript" src="js/Vendor/angular.min.js"></script>
