--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
    
     <!-- Source Controllers -->
     <script type="text/javascript" src="js/Controllers/goals_controller.js"></script>
+    <script type="text/javascript" src="js/Controllers/todos_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
 
     <!-- Source Directives -->
