--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/Vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/Vendor/xeditable.min.js"></script>
+    <script type="text/javascript" src="js/Vendor/moment.js"></script>
 
     <!-- Source MoleskinApp -->
     <script type="text/javascript" src="js/Apps/moleskin.js"></script>
@@ -57,6 +58,7 @@
     <script type="text/javascript" src="js/Controllers/goals_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/todos_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
+    <script type="text/javascript" src="js/Controllers/dates_controller.js"></script>
 
     <!-- Source Directives -->
 
