totally reworked todos and dates controller, getting the date stuff working allowing being able to cycle through days. Starting to implment creation of todo based on date.. added a dates_service.js to handle date storage.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <!-- Source Services -->
     <script type="text/javascript" src="js/Services/users_service.js"></script>
+    <script type="text/javascript" src="js/Services/dates_service.js"></script>
    
     <!-- Source Controllers -->
     <script type="text/javascript" src="js/Controllers/goals_controller.js"></script>
