--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="col-xs-6">
             <ol class="breadcrumb">
                 <li><a href="#login"><i class="fa fa-home"></i> Login</a></li>
-                <li><a href="#goals"><i class="fa fa-list fa-rotate-180"></i> Goals</a></li>
                 <li><a href="#todos"><i class="fa fa-check-square"></i> Todos</a></li>
+                <li><a href="#goals"><i class="fa fa-list fa-rotate-180"></i> Goals</a></li>                
                 <li>
                     <span ng-controller="usersController">                    
                         <a href="#" ng-click="logout()">Log Out</a>
@@ -59,7 +59,7 @@
     <script type="text/javascript" src="js/Controllers/goals_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/todos_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
-    <script type="text/javascript" src="js/Controllers/dates_controller.js"></script>
+    <!--<script type="text/javascript" src="js/Controllers/dates_controller.js"></script>-->
 
     <!-- Source Directives -->
 
