Google startup weekend at deans. lots worked on. Trying to implement services cleanly. all messed up state..

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- Source Venders -->
     <script type="text/javascript" src="js/Vendor/angular.min.js"></script>
     <script type="text/javascript" src="js/Vendor/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/Vendor/moment.js"></script>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/Vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/Vendor/xeditable.min.js"></script>
-    <script type="text/javascript" src="js/Vendor/moment.js"></script>
 
     <!-- Source MoleskinApp -->
     <script type="text/javascript" src="js/Apps/moleskin.js"></script>
@@ -54,14 +54,17 @@
     <!-- Source Services -->
     <script type="text/javascript" src="js/Services/users_service.js"></script>
     <script type="text/javascript" src="js/Services/dates_service.js"></script>
+    <script type="text/javascript" src="js/Services/goals_service.js"></script>
+    <script type="text/javascript" src="js/Services/todos_service.js"></script>
    
     <!-- Source Controllers -->
     <script type="text/javascript" src="js/Controllers/goals_controller.js"></script>
+    <script type="text/JavaScript" src="js/Controllers/goals_weekly_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/todos_controller.js"></script>
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
-    <!--<script type="text/javascript" src="js/Controllers/dates_controller.js"></script>-->
 
     <!-- Source Directives -->
+    <!--  <script type="text/javascript" src="js/Directives/goals_weekly_checkboxes.js"></script> -->
 
     <!-- Source Routes -->
     <script type="text/javascript" src="js/Routes/routes.js"></script>
