Trying to get token based authentication working. broken

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="js/Vendor/angular.min.js"></script>
     <script type="text/javascript" src="js/Vendor/angular-route.min.js"></script>
     <script type="text/javascript" src="js/Vendor/moment.js"></script>
+    <script type="text/javascript" src="js/Vendor/base64.js"></script>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/Vendor/bootstrap.min.js"></script>
