--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/Vendor/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/Vendor/angular-local-storage.min.js"></script>
     <script type="text/javascript" src="js/Vendor/xeditable.min.js"></script>
 
     <!-- Source MoleskinApp -->
