--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#login"><i class="fa fa-home"></i> Login</a></li>
                     <li><a href="#todos"><i class="fa fa-check-square"></i> Todos</a></li>
-                    <li><a href="#goals"><i class="fa fa-list fa-rotate-180"></i> Goals</a></li>             
+                    <li><a href="#goals"><i class="fa fa-list fa-rotate-180"></i> Goals</a></li>
+                    <li><a href="#changelog"><i class="fa fa-info"></i> Changelog</a></li>             
                     <li><a ng-controller="usersController" href="#" ng-click="logout()">Log Out</a></li>
                 </ul>
             </div>
