Trying to fix the hard Goal push bug. Plaed around with a directive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <br><br>
 
     <!-- Source Venders -->
-    <script type="text/javascript" src="js/Vendor/angular.min.js"></script>
+    <script type="text/javascript" src="js/Vendor/angular.min.js"></script>    
     <script type="text/javascript" src="js/Vendor/angular-route.min.js"></script>
     <script type="text/javascript" src="js/Vendor/moment.js"></script>         
     <script type="text/javascript" src="js/Vendor/jquery-2-1-0.min.js"></script>
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="js/Controllers/users_controller.js"></script>
 
     <!-- Source Directives -->
+    <script type="text/javascript" src="js/Directives/goal_status_directive.js"></script>
    
     <!-- Source Routes -->
     <script type="text/javascript" src="js/Routes/routes.js"></script>
